# Python_Template

django-api-rest/: pyproject.toml
django-api-rest/pokemon/: tests.py  urls.py  views.py
django-api-rest/pokemon_api/: settings.py  urls.py
poetry-demo-np-calc/tests/: test_np_operations.py
python_oop/: main.py  person.py  singleton_drink.py  user.py
python_operations/: dictionaries.py  enumerate_zip.py  kargs_args.py  lambda.py  lists.py  match.py  operators.py  sets.py  tuples.py
